--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:dev": "run-s clean mkdir start:dev",
     "build:production": "run-s clean mkdir start:production",
     "clean": "rm -fr ./dist",
-    "mkdir": "mkdir dist && mkdir dist/css",
+    "mkdir": "mkdir -p dist/css",
     "start:production": "run-s production:*",
     "production:stylus": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./dist/css --compress",
     "production:pug": "pug ./src/index.pug --basedir ./src/ --out ./dist/ --obj ./page-data.js",
