--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "imagemin": "node ./imagemin.js"
   },
   "dependencies": {
-    "autoprefixer-stylus": "^0.11.0",
-    "babel-core": "^6.21.0",
+    "autoprefixer-stylus": "^0.13.0",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "browser-sync": "^2.18.5",
-    "imagemin": "silviopaganini/imagemin",
+    "babel-preset-es2015": "^6.22.0",
+    "browser-sync": "^2.18.7",
+    "imagemin": "^5.2.2",
     "imagemin-mozjpeg": "^6.0.0",
     "imagemin-pngquant": "^5.0.0",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.0.1",
     "pug-cli": "^1.0.0-alpha6",
     "stylus": "^0.54.5",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.1"
   }
 }
