--- a/package.json
+++ b/package.json
@@ -11,16 +11,11 @@
   "license": "MIT",
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development DIST_DIR=./dist-dev run-s clean start:build:dev",
-    "build:production": "cross-env NODE_ENV=production DIST_DIR=./dist run-s clean cp:files start:build:production",
+    "build:production": "cross-env NODE_ENV=production DIST_DIR=./dist run-s clean start:build:production",
     "clean": "rm -fr $DIST_DIR",
-    "cp:files": "node script/cp-files.js",
-    "start:build:production": "run-p pug stylus webpack imagemin",
-    "start:build:dev": "run-p webpack browser-sync",
-    "pug": "node ./script/pug.js",
-    "stylus": "node ./script/stylus.js",
-    "webpack": "webpack --config ./script/webpack.config.js",
-    "imagemin": "node ./script/imagemin.js",
-    "browser-sync": "node ./script/browser-sync.js"
+    "start:build:production": "npm run webpack && node ./scripts/production.js",
+    "start:build:dev": "npm run webpack & node ./scripts/browser-sync.js",
+    "webpack": "webpack --config ./scripts/webpack.config.js"
   },
   "dependencies": {
     "autoprefixer-stylus": "^0.14.0",
@@ -30,6 +25,7 @@
     "eslint": "^4.7.0",
     "fs-extra": "^4.0.2",
     "glob": "^7.1.2",
+    "htmlhint": "^0.9.13",
     "imagemin": "^5.3.1",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.0.1",
