:recycle: change script name

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:production": "cross-env NODE_ENV=production DIST_DIR=./dist run-s clean start:build:production",
     "clean": "rm -fr $DIST_DIR",
     "start:build:production": "npm run webpack && node ./scripts/production.js",
-    "start:build:dev": "npm run webpack & node ./scripts/browser-sync.js",
+    "start:build:dev": "npm run webpack & node ./scripts/dev.js",
     "webpack": "webpack --config ./scripts/webpack.config.js"
   },
   "dependencies": {
