--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "dependencies": {
     "autoprefixer-stylus": "^0.14.0",
     "babel-polyfill": "^6.26.0",
-    "browser-sync": "^2.18.13",
-    "cross-env": "^5.0.1",
-    "eslint": "^4.7.0",
+    "browser-sync": "^2.23.6",
+    "cross-env": "^5.1.3",
+    "eslint": "^4.18.1",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "htmlhint": "^0.9.13",
@@ -35,15 +35,16 @@
     "pug": "^2.0.0-rc.4",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
-    "ts-loader": "^3.0.5",
-    "tslint": "^5.7.0",
+    "ts-loader": "^4.0.0",
+    "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.5.2",
-    "webpack": "^3.4.1"
+    "typescript": "^2.7.2",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
   },
   "devDependencies": {
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1"
