--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.7.2",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   },
