--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "noliaki <noliaki.mobile@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build:dev": "cross-env NODE_ENV=development run-s clean start:build:dev",
-    "build:production": "cross-env NODE_ENV=production run-s clean start:build:production",
+    "dev": "cross-env NODE_ENV=development run-s clean start:build:dev",
+    "build": "cross-env NODE_ENV=production run-s clean start:build:production",
     "clean": "node scripts/clean.js",
     "start:build:production": "npm run webpack && node ./scripts/production.js",
     "start:build:dev": "npm run webpack & node ./scripts/dev.js",
@@ -20,34 +20,39 @@
   "dependencies": {
     "autoprefixer-stylus": "^0.14.0",
     "babel-polyfill": "^6.26.0",
-    "browser-sync": "^2.23.6",
-    "cross-env": "^5.1.3",
-    "eslint": "^4.18.1",
+    "browser-sync": "^2.23.7",
+    "cross-env": "^5.1.4",
+    "eslint": "^4.19.1",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "htmlhint": "^0.9.13",
     "imagemin": "^5.3.1",
     "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.0.1",
+    "imagemin-pngquant": "^5.1.0",
     "imagemin-svgo": "^6.0.0",
-    "js-yaml": "^3.10.0",
+    "js-yaml": "^3.11.0",
     "npm-run-all": "^4.0.2",
-    "pug": "^2.0.0-rc.4",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
-    "ts-loader": "^4.0.0",
+    "stylus-loader": "^3.0.2",
+    "ts-loader": "^4.2.0",
     "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.7.2",
-    "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.9"
+    "typescript": "^2.8.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "vue": "^2.5.16",
+    "vue-loader": "^15.0.1",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15"
   },
   "devDependencies": {
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0"
   }
 }
