--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "browser-sync": "^2.23.7",
     "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
@@ -34,6 +35,7 @@
     "npm-run-all": "^4.0.2",
     "pug": "^2.0.3",
     "pug-loader": "^2.4.0",
+    "pug-plain-loader": "^1.0.0",
     "rimraf": "^2.6.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -44,6 +46,7 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "vue": "^2.5.16",
     "vue-loader": "^15.0.1",
+    "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
